<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".myHome"
    tools:showIn="@layout/activity_my_home">

    <LinearLayout
        android:id="@+id/assignedlayout"
        android:layout_width="120dp"
        android:layout_height="226dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="422dp"
        android:layout_marginEnd="254dp"
        android:layout_marginBottom="27dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/devicelayout"
        android:layout_width="120dp"
        android:layout_height="226dp"
        android:layout_marginStart="263dp"
        android:layout_marginTop="422dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="27dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/homelayout"
        android:layout_width="120dp"
        android:layout_height="226dp"
        android:layout_marginTop="99dp"
        android:layout_marginBottom="350dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

    <TextView
        android:id="@+id/textHome"
        android:layout_width="96dp"
        android:layout_height="19dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="627dp"
        android:text="@string/textHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="363dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="293dp"
        android:text="@string/textDevice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textAssigned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="363dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="293dp"
        android:text="@string/textAssignedDevice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textDevice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>